--- a/rocketFlowSdk/src/main/res/layout/date_day_card.xml
+++ b/rocketFlowSdk/src/main/res/layout/date_day_card.xml
@@ -5,8 +5,12 @@
 
     <data>
         <variable
-            name="data"
-            type="com.tracki.data.model.response.config.Slot" />
+            name="dataDate"
+            type="String" />
+
+        <variable
+            name="dataDay"
+            type="String" />
     </data>
 
     <LinearLayout
@@ -15,29 +19,40 @@
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cv_time"
-            android:layout_marginEnd="@dimen/dimen_6"
+            android:id="@+id/cv_day"
+            android:layout_marginEnd="@dimen/dimen_10"
             app:cardElevation="@dimen/dimen_2"
             app:cardUseCompatPadding="true"
-            android:layout_width="@dimen/dimen_100"
+            android:layout_width="@dimen/dimen_50"
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:padding="@dimen/dimen_10"
+                android:padding="@dimen/dimen_5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center_horizontal">
 
                 <TextView
                     style="@style/TextViewStyle"
                     android:textSize="@dimen/text_size_12"
                     android:id="@+id/tv_day"
-                    android:text="@{data.time}"
+                    android:text="@{dataDay}"
                     android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="11:00 - 12:00" />
+                    tools:text="Mon" />
+
+                <TextView
+                    android:layout_marginTop="@dimen/dimen_5"
+                    style="@style/TextViewStyle"
+                    android:textSize="@dimen/text_size_12"
+                    android:id="@+id/tv_date"
+                    android:text="@{dataDate}"
+                    android:textColor="@color/black"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="12" />
 
 
             </LinearLayout>
