--- a/rocketFlowSdk/src/main/res/layout/item_dynamic_form_slot.xml
+++ b/rocketFlowSdk/src/main/res/layout/item_dynamic_form_slot.xml
@@ -1,98 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
-<!--        <variable-->
-<!--            name="slotAdapter"-->
-<!--            type="SlotAdapter" />-->
 
     </data>
-    <androidx.cardview.widget.CardView
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dimen_5"
-        android:layout_marginTop="@dimen/dimen_10"
-        android:layout_marginEnd="@dimen/dimen_5"
-        android:layout_marginBottom="@dimen/dimen_0"
-        android:elevation="@dimen/dimen_8"
-        app:cardBackgroundColor="@color/white"
-        app:cardUseCompatPadding="true"
-        app:contentPadding="@dimen/dimen_4"
-        tools:ignore="UnusedAttribute">
-    <LinearLayout
-        android:padding="@dimen/dimen_10"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:background="@color/transparent">
 
-        <LinearLayout
-            android:weightSum="2"
-            android:gravity="center_vertical"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="500dp"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="@dimen/dimen_5"
+            android:layout_marginTop="@dimen/dimen_10"
+            android:layout_marginEnd="@dimen/dimen_5"
+            android:layout_marginBottom="@dimen/dimen_0"
+            android:elevation="@dimen/dimen_8"
+            app:cardBackgroundColor="@color/white"
+            app:cardUseCompatPadding="true"
+            app:contentPadding="@dimen/dimen_4"
+            tools:ignore="UnusedAttribute">
 
-            <TextView
-                android:layout_weight="0.6"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/TextViewStyleBold"
-                android:textSize="@dimen/text_size_10"
-                android:text="@string/preferred_date_and_time"/>
+                android:orientation="vertical"
+                android:padding="@dimen/dimen_10">
 
-            <Spinner
-                android:layout_weight="1.4"
-                android:layout_marginStart="@dimen/dimen_10"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:entries="@array/Places"
-                android:spinnerMode="dropdown" />
+                <ImageView
+                    android:id="@+id/btnClose"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:src="@drawable/ic_cross" />
 
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_20"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
 
-        <TextView
-            android:layout_marginTop="@dimen/dimen_20"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_14"
-            style="@style/TextViewStyle"
-            android:text="@string/when_would_you_like_technician_to_visit"/>
+                    <TextView
+                        style="@style/TextViewStyleBold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.4"
+                        android:text="@string/preferred_date_and_time"
+                        android:textSize="@dimen/text_size_12"
+                        android:textStyle="bold" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginTop="@dimen/dimen_5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:manager="LinearLayoutManager"
-            tools:listitem="@layout/date_day_card"
-            tools:itemCount="10"/>
+                    <Spinner
+                        android:id="@+id/dd_hubs"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/dimen_10"
+                        android:layout_weight="1.6"
+                        android:entries="@array/Places"
+                        android:spinnerMode="dropdown"
+                        android:textSize="@dimen/text_size_12" />
 
-        <TextView
-            style="@style/TextViewStyle"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_12"
-            android:layout_marginTop="@dimen/dimen_20"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/around_what_time_would_you_like_technician_to_visit"/>
+                </LinearLayout>
 
-        <GridView
-            android:id="@+id/gv_slot"
-            android:layout_marginTop="@dimen/dimen_5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:numColumns="3"
-            android:horizontalSpacing="@dimen/dimen_3"
-            android:verticalSpacing="@dimen/dimen_2"
-            tools:itemCount="9"
-            android:scrollbars="none"
-            tools:listitem="@layout/time_card"/>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:visibility="visible"
+                    android:id="@+id/ll_slots"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
+                    <TextView
+                        style="@style/TextViewStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dimen_20"
+                        android:text="@string/select_preferred_date"
+                        android:textSize="@dimen/text_size_14"
+                        android:textStyle="bold" />
 
-    </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dimen_5"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:itemCount="10"
+                        tools:listitem="@layout/date_day_card"
+                        tools:manager="LinearLayoutManager" />
+
+                    <TextView
+                        style="@style/TextViewStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dimen_20"
+                        android:text="@string/select_time_slot"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/text_size_14"
+                        android:textStyle="bold" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/gv_slot"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginTop="@dimen/dimen_5"
+                        android:horizontalSpacing="@dimen/dimen_3"
+                        android:scrollbars="none"
+                        android:verticalSpacing="@dimen/dimen_2"
+                        tools:itemCount="9"
+                        tools:listitem="@layout/time_card" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_done"
+                        style="@style/ButtonBlueStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/dimen_20"
+                        android:text="@string/done" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/iv_no_data"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/no_data"
+                    android:visibility="gone"/>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </RelativeLayout>
 </layout>
