--- a/rocketFlowSdk/src/main/res/layout/activity_sdk_main.xml
+++ b/rocketFlowSdk/src/main/res/layout/activity_sdk_main.xml
@@ -11,10 +11,11 @@
             type="com.tracki.ui.main.MainViewModel" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <LinearLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:visibility="visible"
+        android:orientation="vertical"
         android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -42,5 +43,5 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </LinearLayout>
 </layout>
