--- a/rocketFlowSdk/src/main/res/layout/item_card_work_flow.xml
+++ b/rocketFlowSdk/src/main/res/layout/item_card_work_flow.xml
@@ -4,23 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-          <variable
-              name="data"
-              type="com.tracki.data.model.response.config.DashBoardBoxItem" />
+        <variable
+            name="data"
+            type="com.tracki.data.model.response.config.DashBoardBoxItem" />
     </data>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardMain"
-        android:layout_width="120dp"
+        android:layout_width="100dp"
         android:layout_height="85dp"
-        app:cardBackgroundColor="@color/windowBackgroundColor"
         app:cardUseCompatPadding="true"
         android:clipChildren="false"
-        app:cardElevation="@dimen/dimen_5"
-        app:cardCornerRadius="@dimen/dimen_3">
+        app:cardCornerRadius="@dimen/dimen_5">
 
         <RelativeLayout
-
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -35,8 +32,8 @@
                 <TextView
                     style="@style/TextViewStyle"
                     android:id="@+id/tvNumber"
-                    android:textSize="21sp"
-                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textColor="@color/blue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -54,7 +51,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textSize="10sp"
+                    android:textSize="11sp"
+                    android:paddingRight="@dimen/dimen_3"
+                    android:paddingLeft="@dimen/dimen_3"
                     android:text="@{data.stageName}" />
             </LinearLayout>
         </RelativeLayout>
